--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -62,6 +62,14 @@ jobs:
           echo "Listing generated Allure files..."
           ls -R build/reports/allure-report || true
           ls -R build/allure-results || true
+      - name: 🧹 Disable caching for GitHub Pages
+        run: |
+          # Create a .nojekyll file so GitHub Pages serves files directly
+          echo "" > build/reports/allure-report/allureReport/.nojekyll
+          # Add cache-control headers (for GitHub CDN)
+          echo "Cache-Control: no-cache, no-store, must-revalidate" > build/reports/allure-report/allureReport/.htaccess
+          # Optional: timestamp file to confirm freshness
+          date > build/reports/allure-report/allureReport/build-time.txt
 
       - name: 🌐 Publish Allure report to GitHub Pages
         if: always() # ✅ even if tests fail
@@ -72,6 +80,7 @@ jobs:
           publish_dir: build/reports/allure-report/allureReport
           force_orphan: true
           commit_message: "🧾 Publish Allure report from workflow run"
+          cname: ""
 
       - name: 💾 Upload Allure report as artifact
         if: always()
