--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -16,7 +16,7 @@ on:
         type: choice
         options: [all, smoke, regression]
   schedule:
-    - cron: "0 2 * * *" # every day at 2 AM UTC
+    - cron: "0 2 * * *" # Run every day at 2 AM UTC
   push:
     branches: [main]
 
@@ -26,11 +26,8 @@ jobs:
 
     env:
       ALLURE_RESULTS: build/allure-results
-      ALLURE_REPORT: build/reports/allure-report/allureReport
-
-    permissions:
-      contents: write   # ✅ required for GitHub Pages publishing
-      actions: read
+      ALLURE_REPORT: build/reports/allure-report
+      REPORT_BASE: build/reports/allure-report/allureReport
 
     steps:
       - name: 🧩 Checkout repository
@@ -39,10 +36,10 @@ jobs:
       - name: ☕ Set up JDK 21
         uses: actions/setup-java@v4
         with:
-          java-version: '21'
-          distribution: 'temurin'
+          java-version: "21"
+          distribution: "temurin"
 
-      - name: ⚙️ Set executable permission for Gradle
+      - name: ⚙️ Set Gradle wrapper executable
         run: chmod +x gradlew
 
       - name: 🚀 Run API tests
@@ -57,32 +54,38 @@ jobs:
       - name: 🧾 Generate Allure report
         run: ./gradlew allureReport --info
 
-      - name: 📂 Verify Allure output
+      - name: 🧹 Add cache-busting & timestamp files
         run: |
-          echo "Listing generated Allure files..."
-          ls -R build/reports/allure-report || true
-          ls -R build/allure-results || true
-      - name: 🧹 Disable caching for GitHub Pages
-        run: |
-          # Create a .nojekyll file so GitHub Pages serves files directly
-          echo "" > build/reports/allure-report/allureReport/.nojekyll
-          # Add cache-control headers (for GitHub CDN)
-          echo "Cache-Control: no-cache, no-store, must-revalidate" > build/reports/allure-report/allureReport/.htaccess
-          # Optional: timestamp file to confirm freshness
-          date > build/reports/allure-report/allureReport/build-time.txt
+          REPORT_DIR="${{ env.REPORT_BASE }}"
+          mkdir -p "$REPORT_DIR"
+          echo "" > "$REPORT_DIR/.nojekyll"
+          echo "Cache-Control: no-cache, no-store, must-revalidate" > "$REPORT_DIR/.htaccess"
+          date > "$REPORT_DIR/build-time.txt"
+          echo "✅ Cache-busting and timestamp added to $REPORT_DIR"
+          ls -R "$REPORT_DIR"
 
-      - name: 🌐 Publish Allure report to GitHub Pages
-        if: always() # ✅ even if tests fail
+      - name: 🕒 Prepare historical report folder
+        id: report_info
+        run: |
+          DATE_DIR=$(date -u +"%Y-%m-%d_%H-%M-%S")
+          DEST_DIR="history/${DATE_DIR}_${{ inputs.env }}"
+          echo "dest_dir=$DEST_DIR" >> $GITHUB_OUTPUT
+          mkdir -p "build/history/$DEST_DIR"
+          cp -r build/reports/allure-report/allureReport/* "build/history/$DEST_DIR/"
+          echo "✅ Copied Allure report to build/history/$DEST_DIR"
+
+      - name: 🌐 Publish Allure report (with history)
+        if: always()
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
-          publish_dir: build/reports/allure-report/allureReport
+          publish_dir: build/history
           force_orphan: true
-          commit_message: "🧾 Publish Allure report from workflow run"
+          commit_message: "🧾 Publish Allure report for ${{ inputs.env }} at $(date -u)"
           cname: ""
 
-      - name: 💾 Upload Allure report as artifact
+      - name: 💾 Upload latest Allure report as artifact
         if: always()
         uses: actions/upload-artifact@v4
         with:
