--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -50,7 +50,7 @@ jobs:
           if [ "${{ inputs.groups }}" != "all" ]; then
             GROUP_ARG="-Dgroups=${{ inputs.groups }}"
           fi
-          ./gradlew clean test $GROUP_ARG -Denv=${{ inputs.env }}
+          ./gradlew clean test $GROUP_ARG -Denv=${{ inputs.env }} || true
 
       - name: 🧾 Generate Allure report
         run: ./gradlew allureReport --info
@@ -70,7 +70,16 @@ jobs:
           force_orphan: true
           commit_message: "🧾 Publish Allure report for ${{ inputs.env }} - ${{ inputs.groups }}"
 
+      - name: 💾 Upload Allure report as artifact
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: allure-report-${{ inputs.env }}-${{ inputs.groups }}
+          path: ${{ env.REPORT_PATH }}
+          retention-days: 7  # keep for a week
+
       - name: 🔗 Log published report URL
         run: |
           echo "✅ Allure report published successfully!"
-          echo "🌐 URL: https://ikaraoz.github.io/toolshop-api-restassured-testng-framework/"
+          echo "🌐 Access it here:"
+          echo "   https://ikaraoz.github.io/toolshop-api-restassured-testng-framework/"
