converting testng tests to cucumber bdd tests

--- a/build.gradle
+++ b/build.gradle
@@ -34,10 +34,15 @@ dependencies {
 //    testImplementation 'io.rest-assured:json-schema-validator:5.5.1'
     testImplementation 'org.assertj:assertj-core:3.26.0'
     testImplementation 'org.slf4j:slf4j-simple:2.0.13'
+    testImplementation 'io.cucumber:cucumber-java:7.15.0'
+    testImplementation 'io.cucumber:cucumber-testng:7.15.0'
+    testImplementation 'io.cucumber:cucumber-picocontainer:7.15.0'
 
     // Allure for TestNG + RestAssured integration
     testImplementation 'io.qameta.allure:allure-testng:2.29.0'
     testImplementation 'io.qameta.allure:allure-rest-assured:2.29.0'
+    testImplementation 'io.qameta.allure:allure-cucumber7-jvm:2.29.0'
+
 }
 
 test {
@@ -47,6 +52,13 @@ test {
         }
         listeners << 'io.qameta.allure.testng.AllureTestNg'
     }
+
+    // Let Gradle include every compiled test class
+    include '**/*Test.class'
+    include '**/*Tests.class'
+//    include '**/*TestSuite.class'
+//    include '**/*Cucumber*.class'
+
     testLogging { events "passed", "skipped", "failed" }
     systemProperty "env", System.getProperty("env", "local")
 }
